# geotiles-rs

./: .gitignore  .typos.toml  Cargo.toml  README.md  deny.toml
.github/workflows/: build.yml  deploy.yml  doc.yml  fmt-clippy.yml  test.yml
docs/: GEOTILES_RUST_MIGRATION_PLAN.md
docs/benchmarks/: README.md
examples/: config.toml
geotiles/: Cargo.toml
geotiles/src/: cli.rs  config.rs  main.rs  run.rs  tmr.rs
geotiles/src/cli/: mod.rs  tests.rs
geotiles/src/config/: mod.rs  tests.rs
geotiles/src/logger/: mod.rs  tests.rs
geotiles/src/run/: mod.rs  tests.rs
geotiles/src/settings/: mod.rs  tests.rs
geotiles/src/tmr/: mod.rs  tests.rs
libgeotiles/: Cargo.toml
libgeotiles/benches/: encode.rs  pipeline.rs
libgeotiles/src/: error.rs  lib.rs
libgeotiles/src/backend/: cpu.rs  gpu.rs  mod.rs  tests.rs
libgeotiles/src/backend/shaders/: resize.wgsl
libgeotiles/src/coords/: geographic.rs  mercator.rs  mod.rs  tests.rs
libgeotiles/src/crs/: mod.rs
libgeotiles/src/encode/: mod.rs  options.rs  tests.rs
libgeotiles/src/gdal_io/: mod.rs  tests.rs
libgeotiles/src/geotiff/: mod.rs  tests.rs
libgeotiles/src/pipeline/: chunks.rs  grids.rs  mod.rs  tests.rs
libgeotiles/src/tile/: mod.rs  tests.rs
libgeotiles/tests/: fixtures_manifest.toml  gdal_io.rs  tile.rs  warp.rs
libgeotiles/tests/common/: mod.rs
src/: main.rs
