[workspace]
members = ["libgeotiles", "geotiles"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["Gigas002 <gigas002@pm.me>"]
repository = "https://github.com/Gigas002/geotiles-rs"
homepage = "https://github.com/Gigas002/geotiles-rs"

[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
