[package]
name = "geotiles"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["libgeotiles/default"]
png = ["libgeotiles/png"]
jpeg = ["libgeotiles/jpeg"]
webp = ["libgeotiles/webp"]
avif = ["libgeotiles/avif"]
jxl = ["libgeotiles/jxl"]
gpu = ["libgeotiles/gpu"]

[dependencies]
libgeotiles = { path = "../libgeotiles" }
