[package]
name = "libgeotiles"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["png", "geographic", "mercator"]
geographic = []
mercator = []
png = ["dep:image", "image/png"]
jpeg = ["dep:image", "image/jpeg"]
webp = ["dep:image", "image/webp"]
avif = []
jxl = []
gpu = []

[dependencies]
gdal = { workspace = true }
gdal-sys = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
image = { version = "0.25", default-features = false, optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
