[package]
name = "libgeotiles"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["png", "geographic", "mercator"]
geographic = []
mercator = []
png = ["dep:image", "image/png"]
jpeg = ["dep:image", "image/jpeg"]
webp = ["dep:image", "image/webp"]
# AVIF encoding via `ravif` (pure Rust, no system libs required).
avif = ["dep:image", "image/avif"]
# JPEG XL encoding via `jpegxl-rs` (wraps `libjxl`; requires `libjxl-dev` system package,
# or enable the `vendored` sub-feature to compile libjxl from source).
# Note: `jpegxl-rs` is licensed GPL-3.0-or-later.
jxl = ["dep:jpegxl-rs"]
gpu = ["dep:wgpu", "dep:pollster"]

[dependencies]
gdal = { workspace = true }
gdal-sys = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
image = { version = "0.25", default-features = false, optional = true }
jpegxl-rs = { version = "0.14", default-features = false, optional = true }
fast_image_resize = "6"
rayon = "1"
wgpu = { version = "29", optional = true }
pollster = { version = "0.4", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "pipeline"
harness = false
